  * Also install usr/bin/lldb-test-6.0
  * liblld-6.0-dev depends on liblld-6.0 (Closes: #856545)
  * Add new symbols for libclang1:
    - clang_CXIndex_setInvocationEmissionPathOption
    - clang_CXXRecord_isAbstract
    - clang_Cursor_getObjCManglings
    - clang_getCursorTLSKind
  * add test-keep-alive.diff to improve the keep alive for some
    archs like mips*

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 18 Dec 2017 13:59:34 +0100

llvm-toolchain-snapshot (1:6.0~svn315736-1) unstable; urgency=medium

  * New snapshot
  * Ship liblldMinGW lld lib
  * Ship clang-refactor & clang-func-mapping in clang-X.Y
  * Remove the -Wl option to call gold instead of the normal linker
    (Closes: #876787)
  * Force the deactivation of ocaml until the transition is done
  * Standards Version 4.1.0

  [ Gianfranco Costamagna ]
  * Enable ocaml on release architectures.
  * Add NDEBUG flag, lost in the -g -> -g1 switch

  [ Matthias Klose ]
  * Link with --no-keep-files-mapped --no-map-whole-files when using gold.
  * build using gold on arm64 and s390x. For backports, arm64 might still
    need the BFD linker, and building with only one or two processes in
    parallel.
  * On amd64, s390x, arm64 and ppc64el, build with -g1 instead of -g.
  * Set CMAKE_CXX_FLAGS_RELWITHDEBINFO and pass opt_flags.

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 11 Sep 2017 22:27:20 +0200

llvm-toolchain-snapshot (1:6.0~svn311834-2) unstable; urgency=medium

  * Fix the FTBFS because of -gsplit-dwarf:
    - Only enable it on archs which needs it
    - Only enable it when gcc supports it correctly
  * Fail the build if the arch + gcc has a broken gsplit-dwarf support

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 31 Aug 2017 19:14:53 +0200

llvm-toolchain-snapshot (1:6.0~svn311834-1) unstable; urgency=medium

  * Link LLDB with -latomic on powerpcspe (Closes: #872267)
  * Fix the C++ include path order (Closes: #859083)